--- a/index.html
+++ b/index.html
@@ -47,221 +47,225 @@
 
 	<div id="loader" class="center"></div>
 
+	<div id="realbody">
 	<!--================ Start Header Area =================-->
-	<header class="header_area">
-		<div class="main_menu">
-			<nav class="navbar navbar-expand-lg navbar-light">
-				<div class="container">
-					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-						<ul class="nav navbar-nav menu_nav justify-content-end">
-							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-							<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-						</ul>
+		<header class="header_area">
+			<div class="main_menu">
+				<nav class="navbar navbar-expand-lg navbar-light">
+					<div class="container">
+						<!-- Brand and toggle get grouped for better mobile display -->
+						<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+						 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<!-- Collect the nav links, forms, and other content for toggling -->
+						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+							<ul class="nav navbar-nav menu_nav justify-content-end">
+								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+								<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+								<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+							</ul>
+						</div>
 					</div>
-				</div>
-			</nav>
-		</div>
-	</header>
-	<!--================ End Header Area =================-->
+				</nav>
+			</div>
+		</header>
+		<!--================ End Header Area =================-->
 
-	<!--================ Start Home Banner Area =================-->
-	<section class="home_banner_area">
-		<div class="banner_inner">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-7">
-						<div class="banner_content">
-							<h3 class="text-uppercase">Hell0</h3>
-							<h1 class="text-uppercase">I am Vishal</h1>
-							<h5 class="text-uppercase">Budding Programmer</h5>
-							<div class="d-flex align-items-center">
-								<a class="primary_btn" href="https://cdn.filesend.jp/private/0ToNoF5EqeLp4DVLVoCgFG0R6PeFHonJDv5VioLXpTsyisHUWMJ-dYVwXa2s98P-/Vishal%27s%20Resume.pdf" target="_blank"><span>Download Resume</span></a>
+		<!--================ Start Home Banner Area =================-->
+		<section class="home_banner_area">
+			<div class="banner_inner">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-7">
+							<div class="banner_content">
+								<h3 class="text-uppercase">Hell0</h3>
+								<h1 class="text-uppercase">I am Vishal</h1>
+								<h5 class="text-uppercase">Budding Programmer</h5>
+								<div class="d-flex align-items-center">
+									<a class="primary_btn" href="https://cdn.filesend.jp/private/0ToNoF5EqeLp4DVLVoCgFG0R6PeFHonJDv5VioLXpTsyisHUWMJ-dYVwXa2s98P-/Vishal%27s%20Resume.pdf" target="_blank"><span>Download Resume</span></a>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-5">
+							<div class="home_right_img">
+								<img class="" src="img/banner/home-right.png" alt="">
 							</div>
 						</div>
 					</div>
+				</div>
+			</div>
+		</section>
+		<!--================ End Home Banner Area =================-->
+
+		<!--================ Start About Us Area =================-->
+		<section class="about_area section_gap">
+			<div class="container">
+				<div class="row justify-content-start align-items-center">
 					<div class="col-lg-5">
-						<div class="home_right_img">
-							<img class="" src="img/banner/home-right.png" alt="">
+						<div class="about_img">
+							<img class="" src="img/about-us.png" alt="">
+						</div>
+					</div>
+
+					<div class="offset-lg-1 col-lg-5">
+						<div class="main_title text-left">
+							<h2>let me <br>
+								Introduce  <br>
+								myself</h2>
+							<p>
+								An Intermediate Programmer who started coding 4 years ago when he was in Class IX. I 
+								can't say if I have learnt everything, but I gained alot of exposure overtime, which 
+								only time and no practise could have provided.
+							</p>
+							<p>
+								Currently, I am in Ist year of Computer Science Engineering looking forward to learn as 
+								much as I can. Coding is something I love alot from the very beginning when I started 
+								it. Nothing can be better than commanding a machine to do something for you. This very 
+								thing made me fall in love with it. ;) 
+							</p>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</section>
-	<!--================ End Home Banner Area =================-->
+		</section>
+		<!--================ End About Us Area =================-->
 
-	<!--================ Start About Us Area =================-->
-	<section class="about_area section_gap">
-		<div class="container">
-			<div class="row justify-content-start align-items-center">
-				<div class="col-lg-5">
-					<div class="about_img">
-						<img class="" src="img/about-us.png" alt="">
+		<!--================ Srart Brand Area =================-->
+		
+		<!--================ End Brand Area =================-->
+
+		<!--================ Start Features Area =================-->
+		<section class="features_area">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-lg-8 text-center">
+						<div class="main_title">
+							<h2>my skills </h2>
+							<p>
+								The interaction of knowledge and skill <br> with experience is the key to learning.
+							</p>
+						</div>
 					</div>
 				</div>
-
-				<div class="offset-lg-1 col-lg-5">
-					<div class="main_title text-left">
-						<h2>let me <br>
-							Introduce  <br>
-							myself</h2>
-						<p>
-							An Intermediate Programmer who started coding 4 years ago when he was in Class IX. I 
-							can't say if I have learnt everything, but I gained alot of exposure overtime, which 
-							only time and no practise could have provided.
-						</p>
-						<p>
-							Currently, I am in Ist year of Computer Science Engineering looking forward to learn as 
-							much as I can. Coding is something I love alot from the very beginning when I started 
-							it. Nothing can be better than commanding a machine to do something for you. This very 
-							thing made me fall in love with it. ;) 
-						</p>
+				<div class="row feature_inner">
+					<div class="col-lg-3 col-md-6">
+						<div class="feature_item">
+							<img src="img/services/s1.png" alt="">
+							<h4>Web Development</h4>
+							<p>Learnt it online and few courses from udemy and coursera. Practised on few sites too.</p>
+						</div>
 					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--================ End About Us Area =================-->
-
-	<!--================ Srart Brand Area =================-->
-	
-	<!--================ End Brand Area =================-->
-
-	<!--================ Start Features Area =================-->
-	<section class="features_area">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-lg-8 text-center">
-					<div class="main_title">
-						<h2>my skills </h2>
-						<p>
-							The interaction of knowledge and skill <br> with experience is the key to learning.
-						</p>
+					<div class="col-lg-3 col-md-6">
+						<div class="feature_item">
+							<img src="img/services/s2.png" alt="">
+							<h4>UI/ux design</h4>
+							<p>Not that brilliant in it but still learning.<br><br><br></p>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6">
+						<div class="feature_item">
+							<img src="img/services/s3.png" alt="">
+							<h4>Android Development</h4>
+							<p>Not a pro here, but can call myself intermediate<br><br></p>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6">
+						<div class="feature_item">
+							<img src="img/services/s4.png" alt="">
+							<h4>Gaming</h4>
+							<p>Would not call it a professional skill of mine but one I love alot.<br><br></p>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="row feature_inner">
-				<div class="col-lg-3 col-md-6">
-					<div class="feature_item">
-						<img src="img/services/s1.png" alt="">
-						<h4>Web Development</h4>
-						<p>Learnt it online and few courses from udemy and coursera. Practised on few sites too.</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6">
-					<div class="feature_item">
-						<img src="img/services/s2.png" alt="">
-						<h4>UI/ux design</h4>
-						<p>Not that brilliant in it but still learning.<br><br><br></p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6">
-					<div class="feature_item">
-						<img src="img/services/s3.png" alt="">
-						<h4>Android Development</h4>
-						<p>Not a pro here, but can call myself intermediate<br><br></p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6">
-					<div class="feature_item">
-						<img src="img/services/s4.png" alt="">
-						<h4>Gaming</h4>
-						<p>Would not call it a professional skill of mine but one I love alot.<br><br></p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--================ End Features Area =================-->
+		</section>
+		<!--================ End Features Area =================-->
 
-	<!--================Start Portfolio Area =================-->
+		<!--================Start Portfolio Area =================-->
+		
+		<!--================End Portfolio Area =================-->
+
+		<!--================ Start Testimonial Area =================-->
+		
+		<!--================ End Testimonial Area =================-->
+
+		<!--================ Start Newsletter Area =================-->
+		
+		<!--================ End Newsletter Area =================-->
+
+		<!--================Footer Area =================-->
+		<footer class="footer_area">
+			<div class="container">
+	            <div class="row justify-content-center">
+	                <div class="col-lg-12">
+	                    <div class="footer_top flex-column">
+	                        <div class="footer_logo">
+	                            <a href="#">
+	                                <img src="img/logo.png" alt="">
+	                            </a>
+	                            <h4>Follow Me</h4>
+	                        </div>
+	                        <div class="footer_social">
+	                            <a href="https:\\www.facebook.com/rakesh.tiwari.16940599">
+	                                <img src="img/fb.png" alt="">
+	                            </a>
+	                            <a href="https:\\www.instagram.com/vishal._.codes">
+	                                <img src="img/insta.jpg" alt="">
+	                            </a>
+	                            <a href="https:\\www.github.com/Vishu1694">
+	                                <img src="img/github.jpg" alt="">
+	                            </a>
+	                        </div>
+	                    </div>
+	                </div>
+	            </div>
+	            <div class="row footer_bottom justify-content-center">
+	                <p class="col-lg-8 col-sm-12 footer-text">
+	 <i class="fa fa-heart-o" aria-hidden="true"></i> Vishal.</p>
+	            </div>
+	        </div>
+		</footer>
+		<!--================End Footer Area =================-->
+
+		<!-- Optional JavaScript -->
+		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<script src="js/jquery-3.2.1.min.js"></script>
+		<script src="js/popper.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/stellar.js"></script>
+		<script src="js/jquery.magnific-popup.min.js"></script>
+		<script src="vendors/nice-select/js/jquery.nice-select.min.js"></script>
+		<script src="vendors/isotope/imagesloaded.pkgd.min.js"></script>
+		<script src="vendors/isotope/isotope-min.js"></script>
+		<script src="vendors/owl-carousel/owl.carousel.min.js"></script>
+		<script src="js/jquery.ajaxchimp.min.js"></script>
+		<script src="js/mail-script.js"></script>
+		<!--gmaps Js-->
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
+		<script src="js/gmaps.min.js"></script>
+		<script src="js/theme.js"></script>
+	</div>
 	
-	<!--================End Portfolio Area =================-->
+</body>
 
-	<!--================ Start Testimonial Area =================-->
-	
-	<!--================ End Testimonial Area =================-->
-
-	<!--================ Start Newsletter Area =================-->
-	
-	<!--================ End Newsletter Area =================-->
-
-	<!--================Footer Area =================-->
-	<footer class="footer_area">
-		<div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-12">
-                    <div class="footer_top flex-column">
-                        <div class="footer_logo">
-                            <a href="#">
-                                <img src="img/logo.png" alt="">
-                            </a>
-                            <h4>Follow Me</h4>
-                        </div>
-                        <div class="footer_social">
-                            <a href="https:\\www.facebook.com/rakesh.tiwari.16940599">
-                                <img src="img/fb.png" alt="">
-                            </a>
-                            <a href="https:\\www.instagram.com/vishal._.codes">
-                                <img src="img/insta.jpg" alt="">
-                            </a>
-                            <a href="https:\\www.github.com/Vishu1694">
-                                <img src="img/github.jpg" alt="">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row footer_bottom justify-content-center">
-                <p class="col-lg-8 col-sm-12 footer-text">
- <i class="fa fa-heart-o" aria-hidden="true"></i> Vishal.</p>
-            </div>
-        </div>
-	</footer>
-	<!--================End Footer Area =================-->
-
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/popper.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/stellar.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="vendors/nice-select/js/jquery.nice-select.min.js"></script>
-	<script src="vendors/isotope/imagesloaded.pkgd.min.js"></script>
-	<script src="vendors/isotope/isotope-min.js"></script>
-	<script src="vendors/owl-carousel/owl.carousel.min.js"></script>
-	<script src="js/jquery.ajaxchimp.min.js"></script>
-	<script src="js/mail-script.js"></script>
-	<!--gmaps Js-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
-	<script src="js/gmaps.min.js"></script>
-	<script src="js/theme.js"></script>
-	<script type="text/javascript">
+<script type="text/javascript">
 		document.onreadystatechange = function() { 
             if (document.readyState !== "complete") { 
                 document.querySelector( 
-                  "body").style.visibility = "none"; 
+                  "#realbody").style.visibility = "none"; 
                 document.querySelector( 
                   "#loader").style.visibility = "visible"; 
             } else { 
                 document.querySelector( 
                   "#loader").style.display = "none"; 
                 document.querySelector( 
-                  "body").style.visibility = "visible"; 
+                  "#realbody").style.visibility = "visible"; 
             } 
         }; 
 	</script>
-</body>
 
 </html>
